overflow bug solved

--- a/css/css_doc.css
+++ b/css/css_doc.css
@@ -143,6 +143,7 @@
 
 body{
     background: black;
+    overflow-x: hidden;
 }
 
 nav{
@@ -241,7 +242,7 @@ nav div{
     width: 500px;
     height: 600px;
     transform: rotate(10deg);
-  }
+}
 
 .aboutcontent{
     color: white;
